--- a/react/package.json
+++ b/react/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^33.0.0",
